// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container > BreadcrumbBar renders correctly for "/" 1`] = `
<ol
  aria-label="breadcrumbs"
  className="breadcrumb"
  role="navigation"
>
  <li>
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/"
    >
      <a
        onClick={[Function]}
        style={Object {}}
      >
        Home
      </a>
    </Link>
  </li>
</ol>
`;

exports[`Container > BreadcrumbBar renders correctly for "/site/site-2/edit" 1`] = `
<ol
  aria-label="breadcrumbs"
  className="breadcrumb"
  role="navigation"
>
  <li>
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/"
    >
      <a
        onClick={[Function]}
        style={Object {}}
      >
        Home
      </a>
    </Link>
  </li>
  <li>
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/site/site-2"
    >
      <a
        onClick={[Function]}
        style={Object {}}
      >
        Acme Corp
      </a>
    </Link>
  </li>
  <li>
    Edit Site
  </li>
</ol>
`;
